--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "artemeesenin.github.io",
+  "name": "aymenbougeh.github.io",
   "version": "1.0.0",
   "description": "CV",
-  "homepage": "https://artemeesenin.github.io",
+  "homepage": "https://AymenBougeh.github.io",
   "main": "index.js",
   "scripts": {
     "run-all": "npm-run-all",
@@ -16,16 +16,16 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ArtemeeSenin/artemeesenin.github.io.git"
+    "url": "git+https://github.com/AymenBougeh/aymenbougeh.github.io.git"
   },
   "author": "Artem Senin",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/ArtemeeSenin/artemeesenin.github.io/issues"
+    "url": "https://github.com/AymenBougeh/aymenbougeh.github.io/issues"
   },
   "devDependencies": {
     "http-server": "^14.0.0",
-    "node-sass": "^4.14.1",
+    "node-sass": "^7.0.0",
     "puppeteer": "^13.0.1"
   },
   "dependencies": {
